--- a/a.html
+++ b/a.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="UTF-8"><title>Tým A</title></head>
+<head><meta charset="UTF-8"><title>Tým Pep</title></head>
 <body>
 <h1>Tým A</h1>
 <p>První stanoviště: <b>Stanoviště 1</b></p>
