--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Vítejte ve firemní únikovce 🔐</h1>
 <p>Vyberte svůj tým:</p>
 
-<a href="#">Tým A</a><br>
+<a href="#">Tým Pep</a><br>
 <a href="#">Tým B</a><br>
 <a href="#">Tým C</a>
 
