--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+body {
+  background-image: url('pozadi.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  text-align: center;
+}
+</style>
   <meta charset="UTF-8">
   <title>Firemní únikovka</title>
 </head>
