--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 body {
   background-image: url('pozadi.png');
   background-size: cover;
-  background-position: center;
+  background-position: down;
   background-repeat: no-repeat;
   color: white;
-  text-align: center;
+  text-align: down;
 }
 </style>
   <meta charset="UTF-8">
