--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
 body {
   background-image: url('pozadi.png');
-  background-size: cover;
+  background-size: contain;
   background-position: down;
   background-repeat: no-repeat;
   color: white;
