--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <style>
 body {
   background-image: url('pozadi.png');
-  background-size: contain;
-  background-position: down;
+  background-size: cover;
+  background-position: top center;
   background-repeat: no-repeat;
   color: white;
   text-align: down;
