--- a/index.html
+++ b/index.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-body {
-  background-image: url('pozadi.png');
-  background-size: cover;
-  background-position: top center;
-  background-repeat: no-repeat;
-  color: white;
-  text-align: down;
-}
-</style>
   <meta charset="UTF-8">
   <title>Firemní únikovka</title>
+
+  <style>
+    body {
+      margin: 0;
+      background-color: #111;
+      color: white;
+      text-align: center;
+      font-family: Arial;
+    }
+
+    .container {
+      margin-top: 60px;
+    }
+
+    img {
+      width: 300px;
+      margin-bottom: 40px;
+    }
+
+    a {
+      display: block;
+      margin: 10px;
+      font-size: 20px;
+      color: white;
+      text-decoration: none;
+    }
+  </style>
+
 </head>
 <body>
 
-<h1>Vítejte ve firemní únikovce 🔐</h1>
-<p>Vyberte svůj tým:</p>
+<div class="container">
 
-<a href="#">Tým Pep</a><br>
-<a href="#">Tým B</a><br>
-<a href="#">Tým C</a>
+  <img src="pozadi.png">
+
+  <h1>Firemní únikovka 🔐</h1>
+
+  <a href="start-a.html">Tým Pep</a>
+  <a href="start-b.html">Tým B</a>
+  <a href="start-c.html">Tým C</a>
+
+</div>
 
 </body>
 </html>
