--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <body>
   <div class="wrap">
-    <img class="logo" src="pozadi.png" alt="PRIMASRANDA">
+    <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
     <h1>VSTUP DO HRY 🔐</h1>
 
     <a class="btn" href="start-a.html">Tým Pep</a>
