--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
     <h1>VSTUP DO HRY 🔐</h1>
 
-    <a class="btn" href="start-a.html">Tým Pep</a>
-    <a class="btn" href="start-b.html">Tým B</a>
-    <a class="btn" href="start-c.html">Tým C</a>
+   <a class="btn" href="s1.html">Tým Pep</a>
+   <a class="btn" href="s1.html">Tým B</a>
+   <a class="btn" href="s1.html">Tým C</a>
 
     <div class="hint">Naskenuj QR → vyber tým → začni misi</div>
   </div>
