--- a/s1.html
+++ b/s1.html
@@ -75,7 +75,7 @@ button{
 <img class="logo" src="bezpozadi.png">
 
 <div class="card">
-<h2>Stanoviště 1</h2>
+<h2>První hádanka, troufáte si?</h2>
 <p>
 Najděte místo, kde se vaří nejlepší káva.  
 Kolik je tam kulatých stolů?
