--- a/s1.html
+++ b/s1.html
@@ -26,17 +26,17 @@ body{
 }
 
 .logo{
-  width:min(60vw,260px);
+  width:min(70vw,320px);
   height:auto;
-  filter:drop-shadow(0 0 18px rgba(255,0,0,.85));
+  filter:drop-shadow(0 0 20px rgba(255,0,0,.9));
 }
 
 .card{
   width:min(90vw,420px);
-  background:rgba(0,0,0,.3);
+  background:rgba(0,0,0,.35);
   border:1px solid rgba(255,0,0,.5);
   border-radius:14px;
-  padding:18px;
+  padding:20px;
 }
 
 input{
@@ -60,24 +60,28 @@ button{
   font-size:16px;
   cursor:pointer;
 }
+
 .btn2{
   margin-top:10px;
   padding:12px 18px;
   border-radius:12px;
   border:1px solid rgba(255,0,0,.6);
-  background:rgba(255,0,0,.12);
+  background:rgba(255,0,0,.15);
   color:white;
   font-size:16px;
   cursor:pointer;
 }
+
 .hintBox{
   margin-top:12px;
   padding:12px;
   border-radius:12px;
   border:1px dashed rgba(255,0,0,.5);
-  background:rgba(0,0,0,.35);
+  background:rgba(0,0,0,.4);
   text-align:left;
+  display:none;
 }
+
 #msg{
   margin-top:12px;
   font-weight:bold;
@@ -89,19 +93,21 @@ button{
 
 <div class="wrap">
 
-<img class="logo" src="bezpozadi.png">
+<img class="logo" src="bezpozadi.png" alt="Logo">
 
 <div class="card">
 <h2>První hádanka, troufáte si?</h2>
+
 <p>
-Najděte místo, kde se vaří nejlepší káva.  
+Najděte místo, kde se vaří nejlepší káva.<br>
 Kolik je tam kulatých stolů?
 </p>
 
 <input type="text" id="heslo" placeholder="Zadejte heslo">
 <button onclick="check()">Odeslat</button>
-  <button class="btn2" onclick="showHint()">Nápověda</button>
-<div id="hintBox" class="hintBox" style="display:none;"></div>
+
+<button class="btn2" onclick="nextHint()">Nápověda</button>
+<div id="hintBox" class="hintBox"></div>
 
 <div id="msg"></div>
 </div>
@@ -109,16 +115,28 @@ Kolik je tam kulatých stolů?
 </div>
 
 <script>
-function check(){
-  let val = document.getElementById("heslo").value.toLowerCase().trim();
+let wrongAttempts = 0;
+let hintStep = 0;
 
-  if(val === "4"){   // <-- TADY změníš správné heslo
+function normalize(text){
+  return text.toLowerCase().trim();
+}
+
+function check(){
+  let val = normalize(document.getElementById("heslo").value);
+
+  if(val === "4"){   // ← ZDE změň správné heslo
     window.location.href = "s2.html";
   } else {
+    wrongAttempts++;
     document.getElementById("msg").innerHTML = "❌ Špatné heslo.";
+
+    // Po 2 špatných pokusech nabídne nápovědu
+    if(wrongAttempts >= 2){
+      document.getElementById("msg").innerHTML += "<br><span style='color:#ff9999'>Potřebujete nápovědu?</span>";
+    }
   }
 }
-  let hintStep = 0;
 
 function nextHint(){
   const box = document.getElementById("hintBox");
@@ -127,13 +145,22 @@ function nextHint(){
   if(hintStep === 0){
     box.innerHTML = "💡 Nápověda 1: Hledejte něco červeného poblíž.";
     hintStep++;
-  } else if(hintStep === 1){
+  } 
+  else if(hintStep === 1){
     box.innerHTML = "💡 Nápověda 2: Je to na levé straně u vchodu.";
     hintStep++;
-  } else {
-    box.innerHTML = "✅ Víc nápověd není 😈";
+  } 
+  else {
+    box.innerHTML = "😈 Víc nápověd není.";
   }
 }
+
+// Odeslání klávesou Enter
+document.getElementById("heslo").addEventListener("keydown", function(e){
+  if(e.key === "Enter"){
+    check();
+  }
+});
 </script>
 
 </body>
