--- a/s1.html
+++ b/s1.html
@@ -13,20 +13,8 @@ body{
   font-family: Arial, sans-serif;
   color:#fff;
 }
-  <div id="failScreen" style="
-display:none;
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:black;
-justify-content:center;
-align-items:center;
-z-index:9999;
-">
-  <img src="spatneheslo.png" style="max-width:90%; max-height:90%;">
-</div>
+
+/* třes stránky */
 @keyframes shake {
   0% { transform: translate(0, 0); }
   20% { transform: translate(-8px, 5px); }
@@ -35,10 +23,8 @@ z-index:9999;
   80% { transform: translate(8px, -5px); }
   100% { transform: translate(0, 0); }
 }
+.shake { animation: shake 0.4s; }
 
-.shake {
-  animation: shake 0.4s;
-}
 .wrap{
   min-height:100vh;
   display:flex;
@@ -73,6 +59,7 @@ input{
   background:#111;
   color:white;
   font-size:16px;
+  box-sizing:border-box;
 }
 
 button{
@@ -111,10 +98,31 @@ button{
   margin-top:12px;
   font-weight:bold;
 }
+
+/* fail overlay (obrázek přes celou obrazovku) */
+#failScreen{
+  display:none;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:black;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+}
+#failScreen img{
+  max-width:90%;
+  max-height:90%;
+}
 </style>
 </head>
 
 <body>
+
+<!-- sem patří failScreen (HTML), ne do <style> -->
+<div id="failScreen">
+  <img src="spatnyheslo.png" alt="Špatný heslo, břídilové">
+</div>
 
 <div class="wrap">
 
@@ -144,30 +152,36 @@ let wrongAttempts = 0;
 let hintStep = 0;
 
 function normalize(text){
-  return text.toLowerCase().trim();
+  return (text || "").toLowerCase().trim();
+}
+
+function triggerShake(){
+  document.body.classList.add("shake");
+  setTimeout(() => document.body.classList.remove("shake"), 400);
+}
+
+function showFail(){
+  const screen = document.getElementById("failScreen");
+  screen.style.display = "flex";
+  setTimeout(() => { screen.style.display = "none"; }, 2000);
 }
 
 function check(){
-  let val = normalize(document.getElementById("heslo").value);
+  const val = normalize(document.getElementById("heslo").value);
 
-  if(val === "4"){   // 
+  if(val === "4"){ // <-- sem dej správné heslo
     window.location.href = "s2.html";
-    function showFail(){
-  const screen = document.getElementById("failScreen");
-  screen.style.display = "flex";
+    return;
+  }
 
-  setTimeout(() => {
-    screen.style.display = "none";
-  }, 2000); // 2 sekundy
-}
-  } else {
+  // špatně:
+  wrongAttempts++;
+  document.getElementById("msg").innerHTML = "❌ Špatné heslo.";
+  triggerShake();
   showFail();
-}
 
-    // Po 2 špatných pokusech nabídne nápovědu
-    if(wrongAttempts >= 2){
-      document.getElementById("msg").innerHTML += "<br><span style='color:#ff9999'>Potřebujete nápovědu?</span>";
-    }
+  if(wrongAttempts >= 2){
+    document.getElementById("msg").innerHTML += "<br><span style='color:#ff9999'>Potřebujete nápovědu?</span>";
   }
 }
 
@@ -178,21 +192,17 @@ function nextHint(){
   if(hintStep === 0){
     box.innerHTML = "💡 Nápověda 1: Hledejte něco červeného poblíž.";
     hintStep++;
-  } 
-  else if(hintStep === 1){
+  } else if(hintStep === 1){
     box.innerHTML = "💡 Nápověda 2: Je to na levé straně u vchodu.";
     hintStep++;
-  } 
-  else {
+  } else {
     box.innerHTML = "😈 Víc nápověd není.";
   }
 }
 
-// Odeslání klávesou Enter
+// Enter = odeslat
 document.getElementById("heslo").addEventListener("keydown", function(e){
-  if(e.key === "Enter"){
-    check();
-  }
+  if(e.key === "Enter") check();
 });
 </script>
 
