--- a/s2.html
+++ b/s2.html
@@ -57,7 +57,7 @@ button{
 
 <h2>Druhé stanoviště</h2>
 
-<img class="photo" src="mistos2.jpg" alt="Místo">
+<img class="photo" src="mistos2.jpeg" alt="Místo">
 
 <button onclick="goNext()">JSEM NA MÍSTĚ</button>
 
