--- a/s2.html
+++ b/s2.html
@@ -21,30 +21,51 @@ body{
   justify-content:center;
   align-items:center;
   text-align:center;
-  padding:24px;
-  gap:20px;
+  padding:24px 16px;
+  gap:16px;
 }
 
 .logo{
-  width:min(60vw,260px);
-  filter:drop-shadow(0 0 20px rgba(255,0,0,.8));
+  width:min(70vw,320px);
+  height:auto;
+  filter:drop-shadow(0 0 20px rgba(255,0,0,.9));
+}
+
+h2{
+  margin: 0 0 6px 0;
+  font-size: 28px;
+  text-shadow: 0 0 10px rgba(255,0,0,.6);
 }
 
 .photo{
-  width:min(90vw,500px);
-  border-radius:14px;
-  border:1px solid rgba(255,0,0,.6);
-  box-shadow:0 0 20px rgba(255,0,0,.4);
+  width: min(92vw, 560px);
+  height: auto;
+  border-radius: 14px;
+  border: 1px solid rgba(255,0,0,.55);
+  box-shadow: 0 0 22px rgba(255,0,0,.25);
+  background: rgba(0,0,0,.25);
 }
 
-button{
-  padding:14px 30px;
-  background:red;
-  border:none;
-  border-radius:12px;
-  color:white;
-  font-size:18px;
-  cursor:pointer;
+.btn{
+  width: min(86vw, 340px);
+  padding: 16px 18px;
+  border-radius: 14px;
+  border: 1px solid rgba(255,0,0,.9);
+  background: red;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  cursor: pointer;
+  box-shadow: 0 0 18px rgba(255,0,0,.25);
+}
+
+.btn:active{
+  transform: scale(0.98);
+}
+.small{
+  opacity:.75;
+  font-size: 13px;
+  margin-top: -6px;
 }
 </style>
 </head>
@@ -52,22 +73,16 @@ button{
 <body>
 
 <div class="wrap">
+  <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
 
-<img class="logo" src="bezpozadi.png">
+  <h2>Druhé stanoviště</h2>
+  <div class="small">Dojděte na místo podle fotky</div>
 
-<h2>Druhé stanoviště</h2>
+  <!-- POZOR: název souboru musí sedět přesně -->
+  <img class="photo" src="mistos2.jpeg" alt="Místo stanoviště 2">
 
-<img class="photo" src="mistos2.jpeg" alt="Místo">
-
-<button onclick="goNext()">JSEM NA MÍSTĚ</button>
-
+  <button class="btn" onclick="location.href='s3.html'">JSEM NA MÍSTĚ</button>
 </div>
-
-<script>
-function goNext(){
-  window.location.href = "s3.html";
-}
-</script>
 
 </body>
 </html>
