--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     }
   </style>
 </head>
-
+<script>
+localStorage.setItem("score", 0);
+</script>
 <body>
   <div class="wrap">
     <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
