--- a/s3.html
+++ b/s3.html
@@ -238,6 +238,8 @@ function nextHint(){
      else if(hintStep === 2){
     box.innerHTML = "💡 Nápověda 3: Před poradou si to asi nedáte.";
     hintStep++;
+      } else {
+    box.innerHTML = "😈 Víc nápověd není.";
   }
 }
 
