--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
     <h1>VSTUP DO HRY 🔐</h1>
 
-    <a class="btn" href="s1.html" onclick="localStorage.setItem('score', 0)">Tým Pep</a>
-    <a class="btn" href="s1.html" onclick="localStorage.setItem('score', 0)">Tým B</a>
-    <a class="btn" href="s1.html" onclick="localStorage.setItem('score', 0)">Tým C</a>
+    <a class="btn" href="s1.html" >Tým Pep</a>
+    <a class="btn" href="s1.html">Tým B</a>
+    <a class="btn" href="s1.html">Tým C</a>
 
     <div class="hint">Naskenuj QR → vyber tým → začni misi</div>
   </div>
