--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       text-align:center;
       padding: 24px 16px;
       gap: 14px;
+
+      /* iPhone safe areas (notch) */
       padding-top: calc(24px + env(safe-area-inset-top));
       padding-bottom: calc(24px + env(safe-area-inset-bottom));
     }
@@ -70,12 +72,12 @@
 
 <body>
   <div class="wrap">
-    <img class="logo" src="bezpozadi.png" alt="PRIMASRANDA">
+    <img class="logo" src="pozadi.png" alt="PRIMASRANDA">
     <h1>VSTUP DO HRY 🔐</h1>
 
-    <a class="btn" href="s1.html" >Tým Pep</a>
-    <a class="btn" href="s1.html">Tým B</a>
-    <a class="btn" href="s1.html">Tým C</a>
+    <a class="btn" href="start-a.html">Tým Pep</a>
+    <a class="btn" href="start-b.html">Tým B</a>
+    <a class="btn" href="start-c.html">Tým C</a>
 
     <div class="hint">Naskenuj QR → vyber tým → začni misi</div>
   </div>
