--- a/s2.html
+++ b/s2.html
@@ -79,7 +79,7 @@ h2{
   <div class="small">Dojděte na místo podle fotky</div>
 
   <!-- POZOR: název souboru musí sedět přesně -->
-  <img class="photo" src="misto-s2.jpg" alt="Místo stanoviště 2">
+  <img class="photo" src="mistos2.jpeg" alt="Místo stanoviště 2">
 
   <button class="btn" onclick="location.href='s3.html'">JSEM NA MÍSTĚ</button>
 </div>
