--- a/s1.html
+++ b/s1.html
@@ -190,10 +190,10 @@ function nextHint(){
   box.style.display = "block";
 
   if(hintStep === 0){
-    box.innerHTML = "💡 Nápověda 1: Hledejte něco červeného poblíž.";
+    box.innerHTML = "💡 Nápověda 1: Druhá mocnina č. 2.";
     hintStep++;
   } else if(hintStep === 1){
-    box.innerHTML = "💡 Nápověda 2: Je to na levé straně u vchodu.";
+    box.innerHTML = "💡 Nápověda 2: Odmocina 16.";
     hintStep++;
   } else {
     box.innerHTML = "😈 Víc nápověd není.";
