--- a/s4.html
+++ b/s4.html
@@ -73,10 +73,12 @@ button:active{
     <h2>Instrukce 🔎</h2>
 
     <p>
-      Dobrá práce.<br><br>
-      Teď se přesuňte na další stanoviště.<br>
-      Sledujte indicie kolem sebe.<br><br>
-      Nápověda je blíž, než si myslíte.
+      Vyzvedněte si občertvení.<br><br>
+     A teď<br>
+      30 kroků na východ<br><br>
+      15 kroků na severozápad<br><br>
+      48 kroků na jih<br><br>
+      Máte to?
     </p>
   </div>
 
