--- a/s5.html
+++ b/s5.html
@@ -166,7 +166,7 @@ function check(){
   const val = normalize(document.getElementById("heslo").value);
 
   if(val === "cesnek"){  
-    window.location.href = "s6.html";  // další stanoviště
+    window.location.href = "finale.html";  // další stanoviště
     return;
   }
 
