--- a/finale.html
+++ b/finale.html
@@ -91,6 +91,7 @@ h1{
     <p><strong>Zjistili jste poslední destinaci!</strong></p>
     <p>
       Vaše finální zastávka je:<br><br>
+       <img class="photo" src="mistos2.jpeg" alt="Místo stanoviště 2">
       <strong>(Sem napiš konkrétní místo)</strong>
     </p>
   </div>
