--- a/finale.html
+++ b/finale.html
@@ -120,6 +120,11 @@ function createConfetti(){
 for(let i=0;i<120;i++){
   setTimeout(createConfetti, i * 50);
 }
+
+   <button onclick="location.href='s5.html'">
+   Klikněte, až budete na místě
+  </button>
+  
 </script>
 
 </body>
