--- a/finale.html
+++ b/finale.html
@@ -99,12 +99,10 @@ h1{
   </div>
 
   <button class="btn" onclick="location.href='index.html'">
-    Zpět na začátek
+    NA MÍSTĚ
   </button>
 
-  <button class="btn" onclick="location.href='s5.html'">
-    Klikněte, až budete na místě
-  </button>
+
 
 </div>
 
