--- a/s1.html
+++ b/s1.html
@@ -121,7 +121,7 @@ button{
 
 <!-- sem patří failScreen (HTML), ne do <style> -->
 <div id="failScreen">
-  <img src="spatnyheslo.png" alt="Špatný heslo, břídilové">
+  <img src="spatnyheslo3.png" alt="Špatný heslo, břídilové">
 </div>
 
 <div class="wrap">
